--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/shopping
 spring.datasource.username=root
 spring.datasource.password=1234
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
