--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.properties.hibernate.format_sql=true
+
